feat: reescritura completa V2 (JDA 6 + DAVE, Lavaplayer 2, slash-only)
Mueve la version V1 (JDA 5 + yt-dlp.exe) a `legacy/` y crea una
implementacion nueva en `bertinibot/` desde cero, enfocada en
optimizacion, mantenibilidad y compatibilidad con el protocolo DAVE/E2EE
que Discord exige desde el 1 de marzo de 2026.

Pila tecnica:
- Java 21, Maven con wrapper (`mvnw` / `mvnw.cmd`) y maven-shade-plugin.
- JDA 6.4.2 con `AudioModuleConfig` + libdave-jvm
  (`LDJDADaveSessionFactory` + `NativeDaveFactory`); sin esto la conexion
  de voz se cerraba con codigo 4017 en bucle.
- Lavaplayer 2.2.6 + `dev.lavalink.youtube:v2`. Se elimina por completo
  `yt-dlp.exe` y el proceso externo.
- Logback con rotacion diaria y por tamano.

Arquitectura:
- `AudioService` centraliza el `AudioPlayerManager` singleton, los
  `GuildAudio` por servidor, la `ResolveCache` (LRU 200 / TTL 1h) y los
  timers de auto-desconexion (idle 60s y alone 60s) en un unico
  scheduler. Antes habia dos timers en clases distintas que se pisaban y
  provocaban entradas/salidas falsas del canal.
- `Scheduler` anade modos de loop (OFF / TRACK / QUEUE), shuffle, seek y
  control de volumen.
- `OpusSendHandler` con pass-through Opus (`isOpus=true`, cero CPU si la
  fuente ya es Opus).
- `CommandRegistry` + interfaz `SlashCommand` con auto-registro y
  autocomplete.
- `ComponentRouter` para enrutar interacciones de botones del panel.
- `PanelService` mantiene un panel embebido con botones
  (pause / skip / loop / shuffle / stop / vol +/-) que se actualiza solo
  en cambios de estado.

Comandos (todos slash, sin prefijo `!`, sin intent `MESSAGE_CONTENT`):
`/play` (con autocomplete desde la cache), `/skip`, `/queue`, `/clear`,
`/loop`, `/shuffle`, `/seek`, `/volume`, `/panel`, `/moneda`, `/build`,
`/ping`, `/info`, `/help`.

Configuracion:
- Variables de entorno `DISCORD_TOKEN`, `GUILD_ID`, `BLOCKED_TITLES` con
  `config.properties` como fallback para desarrollo local.
- Truststore `WINDOWS-ROOT` aplicado en arranque